# poDelta

./: pyproject.toml
deltagui/: azure.tcl  deltaRobot.py  deneme.py  main.py  myRobot.json  trajectory.py
deltagui/robots/: DeltaRobot.json  Robot.json
deltagui/trajectories/: trajectory1.npy
